--- a/style.css
+++ b/style.css
@@ -1,47 +1,3 @@
-@font-face {
-	font-family: 'Bender';
-	src: url('/themes/eft/fonts/Bender.eot');
-	src: url('/themes/eft/fonts/Bender.eot?#iefix') format('embedded-opentype'),
-	url('/themes/eft/fonts/Bender.woff') format('woff'),
-	url('/themes/eft/fonts/Bender.ttf') format('truetype'),
-	url('/themes/eft/fonts/Bender.svg#benderregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Bender-Light';
-	src: url('/themes/eft/fonts/Bender-Light.eot');
-	src: url('/themes/eft/fonts/Bender-Light.eot?#iefix') format('embedded-opentype'),
-	url('/themes/eft/fonts/Bender-Light.woff') format('woff'),
-	url('/themes/eft/fonts/Bender-Light.ttf') format('truetype'),
-	url('/themes/eft/fonts/Bender-Light.svg#benderlight') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Bender-Bold';
-	src: url('/themes/eft/fonts/Bender-Bold.eot');
-	src: url('/themes/eft/fonts/Bender-Bold.eot?#iefix') format('embedded-opentype'),
-	url('/themes/eft/fonts/Bender-Bold.woff') format('woff'),
-	url('/themes/eft/fonts/Bender-Bold.ttf') format('truetype'),
-	url('/themes/eft/fonts/Bender-Bold.svg#benderbold') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Neusa-DemiBold';
-	src: url('/themes/eft/fonts/Neusa-DemiBold.eot');
-	src: url('/themes/eft/fonts/Neusa-DemiBold.eot?#iefix') format('embedded-opentype'),
-	url('/themes/eft/fonts/Neusa-DemiBold.woff') format('woff'),
-	url('/themes/eft/fonts/Neusa-DemiBold.ttf') format('truetype'),
-	url('/themes/eft/fonts/Neusa-DemiBold.svg#neusademibold') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 body {
 	width: 100%;
 	min-height: 100%;
@@ -87,7 +43,7 @@ body {
 	flex-direction: row;
 	align-content: flex-start;
 	text-transform: uppercase;
-	font-family: 'Bender', sans-serif;
+	font-family: sans-serif;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 30px;
