--- a/style.css
+++ b/style.css
@@ -483,3 +483,20 @@ body {
 		letter-spacing: 0.1em;
 	}
 }
+
+.logbtn {
+	background-color: #ffffff;
+	border: 10px, white;
+	color: rgb(0, 0, 0);
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+  }
+
+  .fileicon {
+	height: 25px;
+  }
